--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 buildscript {
+
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
+    }
     ext {
         kotlin_version = '1.6.10'
         compose_version = '1.1.1'
