Забыл добавить Retrofit - добавил :) Также добавил gson и DTO классы

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.maximmesh.movies">
 
     <application
+        android:name=".MoviesAndroidApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
