--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,7 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.41"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
+    // Coil(библиотека для загрузки по url картинок)
+    implementation("io.coil-kt:coil-compose:1.3.2")
+
 }
